--- a/package.json
+++ b/package.json
@@ -16,8 +16,10 @@
     "date-fns": "^2.16.1",
     "express": "^4.17.1",
     "express-async-errors": "^3.1.1",
+    "handlebars": "^4.7.7",
     "jsonwebtoken": "^8.5.1",
     "multer": "^1.4.2",
+    "nodemailer": "^6.6.3",
     "pg": "^8.4.2",
     "reflect-metadata": "^0.1.13",
     "tsyringe": "^4.4.0",
@@ -30,6 +32,7 @@
     "@types/jest": "^26.0.20",
     "@types/jsonwebtoken": "^8.5.0",
     "@types/multer": "^1.4.4",
+    "@types/nodemailer": "^6.4.4",
     "jest": "^26.6.3",
     "ts-jest": "^26.5.1",
     "ts-node-dev": "^1.0.0",
